--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.83.1",
+    "nativewind": "^4.2.1",
     "react": "19.2.0",
     "react-native": "0.83.1",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-reanimated": "^4.2.1",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-worklets": "^0.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -32,7 +35,9 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "react-test-renderer": "19.2.0",
+    "tailwindcss": "^3.4.19",
     "typescript": "^5.9.3"
   },
   "engines": {
