--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,20 @@
 {
   "extends": "@react-native/typescript-config",
   "compilerOptions": {
-    "types": ["jest"],
-    "customConditions": ["react-native-strict-api"]
+    "types": [
+      "jest"
+    ],
+    "customConditions": [
+      "react-native-strict-api"
+    ]
   },
-  "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["**/node_modules", "**/Pods"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "nativewind-env.d.ts"
+  ],
+  "exclude": [
+    "**/node_modules",
+    "**/Pods"
+  ]
 }
