--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "@react-native/typescript-config",
   "compilerOptions": {
     "types": [
-      "jest"
+      "jest",
+      "nativewind/types"
     ],
     "customConditions": [
       "react-native-strict-api"
