FIX npm and tsconfig files to run on Windows environment

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "extends": "@react-native/typescript-config",
   "compilerOptions": {
+    "jsx": "react-native",
     "types": [
       "jest",
       "nativewind/types"
-    ],
+    ]
   },
   "include": [
     "**/*.ts",
