--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
-    "prettier": "2.8.8",
+    "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react-test-renderer": "19.2.0",
     "tailwindcss": "^3.4.19",
